# phnt-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rename workflow  rust.yml
src/: build.rs  lib.rs
src/cty/: mod.rs
src/ffi/: _wrapper.h  aarch64_bindgen.rs  generated.rs  wrapper.h  x86_64_bindgen.rs  x86_bindgen.rs
