[package]
name = "phnt"
version = "0.0.26"
license = "MIT"
authors = ["oberrich <oberrich.llvm@proton.me>"]
repository = "https://github.com/oberrich/phnt-rs"
homepage = "https://github.com/oberrich/phnt-rs"
edition = "2021"
build = "src/build.rs"
description = "Rust bindings to the System Informer's (formerly known as Process Hacker) `phnt` native Windows headers"

[features]
regenerate = ["dep:regex", "dep:bindgen", "dep:chrono"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[build-dependencies] # optional
regex   = { version = "1.10.3", optional = true }
bindgen = { version = "0.69.4", optional = true }
chrono  = { version = "0.4.37", optional = true }

[dependencies.windows-sys]
version = "0.42.0"
features = ["Win32_Foundation"]

[dependencies]
nt-string = "0.1.1"
cty = "0.2.2"
