[package]
name = "phnt"
version = "0.0.32"
license = "MIT"
authors = ["oberrich <oberrich.llvm@proton.me>"]
repository = "https://github.com/oberrich/phnt-rs"
homepage = "https://github.com/oberrich/phnt-rs"
edition = "2021"
build = "src/build.rs"
description = "Rust bindings to the System Informer's (formerly known as Process Hacker) `phnt` native Windows headers"

[features]
regenerate = ["dep:regex", "dep:bindgen", "dep:chrono", "dep:yap"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[build-dependencies] # optional
regex   = { version = "1.11.1", optional = true }
bindgen = { version = "0.71.1", optional = true }
chrono  = { version = "0.4.39", optional = true }
yap = { version = "0.12.0", optional = true }

[dependencies.windows-sys]
version = "0.59.0"
features = ["Win32_Foundation"]

[dev-dependencies.windows-sys]
version = "0.59.0"
features = ["Win32_System_Threading"]

[dependencies]
nt-string = "0.1.1"
cty = "0.2.2"
